--- a/pryOrellano_IEFI/pryOrellano_IEFI.csproj
+++ b/pryOrellano_IEFI/pryOrellano_IEFI.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clsConexion.cs" />
+    <Compile Include="clsTarea.cs" />
     <Compile Include="clsUsuario.cs" />
     <Compile Include="frmAdministracionUsuario.cs">
       <SubType>Form</SubType>
@@ -72,6 +73,12 @@
     <Compile Include="frmLogin.Designer.cs">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmTarea.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTarea.Designer.cs">
+      <DependentUpon>frmTarea.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmAdministracionUsuario.resx">
@@ -85,6 +92,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTarea.resx">
+      <DependentUpon>frmTarea.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
