Historial y formularios agregar lugar y tarea

--- a/pryOrellano_IEFI/pryOrellano_IEFI.csproj
+++ b/pryOrellano_IEFI/pryOrellano_IEFI.csproj
@@ -55,11 +55,29 @@
     <Compile Include="frmAdministracionUsuario.Designer.cs">
       <DependentUpon>frmAdministracionUsuario.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmAgregarLugar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAgregarLugar.Designer.cs">
+      <DependentUpon>frmAgregarLugar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmAgregarTarea.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAgregarTarea.Designer.cs">
+      <DependentUpon>frmAgregarTarea.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmAuditoria.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmAuditoria.Designer.cs">
       <DependentUpon>frmAuditoria.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmHistorial.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmHistorial.Designer.cs">
+      <DependentUpon>frmHistorial.cs</DependentUpon>
     </Compile>
     <Compile Include="frmInicio.cs">
       <SubType>Form</SubType>
@@ -84,8 +102,17 @@
     <EmbeddedResource Include="frmAdministracionUsuario.resx">
       <DependentUpon>frmAdministracionUsuario.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmAgregarLugar.resx">
+      <DependentUpon>frmAgregarLugar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAgregarTarea.resx">
+      <DependentUpon>frmAgregarTarea.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmAuditoria.resx">
       <DependentUpon>frmAuditoria.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmHistorial.resx">
+      <DependentUpon>frmHistorial.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmInicio.resx">
       <DependentUpon>frmInicio.cs</DependentUpon>
